--- a/src/graphics/_misc/common.css
+++ b/src/graphics/_misc/common.css
@@ -6,7 +6,7 @@
  body {
   font-family: 'Bahnschrift', sans-serif;
   font-weight: 600;
-  /*color: var(--font-colour);*/
+  /*color: var(--text-color);*/
   /* text-shadow: 2px 2px 2px black; */
   /*overflow: hidden;*/
   margin: 0;
