--- a/src/dashboard/_misc/common.css
+++ b/src/dashboard/_misc/common.css
@@ -6,6 +6,6 @@ otherwise it looks odd in the NodeCG dashboard panels. */
 
 /* So the <v-app> doesn't take up 100% height which breaks
 in the NodeCG dashboard panels anyway. */
-.v-application--wrap {
+.v-application__wrap {
   min-height: 0 !important;
 }
