--- a/src/graphics/_misc/themes/uksglayouts.bsg.theme.scss
+++ b/src/graphics/_misc/themes/uksglayouts.bsg.theme.scss
@@ -28,7 +28,7 @@
   font-family: 'Underscore', 'Metropolis', sans-serif;
   color: white;
 
-  &#GameLayout, #Background {
+  &#Layout, #Background {
     width: 1920px;
     height: 1080px;
     position: fixed;
