--- a/src/graphics/_misc/themes/uksglayouts.bsg.theme.scss
+++ b/src/graphics/_misc/themes/uksglayouts.bsg.theme.scss
@@ -14,7 +14,8 @@
   //--theme-border-colour: #174ed3;
   --theme-border-colour: var(--bsg-color);
   //--theme-gradient: linear-gradient(155deg, rgba(14,63,164,1) 0%, rgba(6,63,164,1) 10%, rgba(6,63,164,0.7) 40%, rgba(44,60,196,0.3) 80%);
-  --theme-gradient: linear-gradient(155deg, var(--slide-color) 0%, rgb(131, 68, 26) 10%, rgba(131, 68, 26, 0.7) 40%, rgba(110, 58, 23, 0.3) 80%);
+  //--theme-gradient: linear-gradient(155deg, var(--slide-color) 0%, rgb(131, 68, 26) 10%, rgba(131, 68, 26, 0.7) 40%, rgba(110, 58, 23, 0.3) 80%);
+  --theme-gradient: linear-gradient(155deg,rgba(145, 78, 33, 1) 0%, rgba(135, 69, 24, 1) 10%, rgba(122, 59, 16, 0.7) 40%, rgba(105, 45, 5, 0.3) 80%);
 
   --border-colour: #44a0e3;
   //--border-colour: var(--slide-color);
