Add 9:16 layout and fix UKSG sponsor bit

--- a/src/graphics/_misc/themes/bsg.theme.css
+++ b/src/graphics/_misc/themes/bsg.theme.css
@@ -107,6 +107,10 @@ strong {
   background-image: url("./bsg/gamelayout/16x9-3p.png");
 }
 
+._9x16_1p_2cams {
+  background-image: url("./bsg/gamelayout/9x16_1p_doublecam.png");
+}
+
 ._ds_1p {
   background-image: url("./bsg/gamelayout/ds-1p.png");
 }
