Fix some omnibar weirdness

--- a/src/graphics/_misc/themes/bsg.theme.css
+++ b/src/graphics/_misc/themes/bsg.theme.css
@@ -61,7 +61,13 @@ strong {
 }
 
 .TimerParent {
-  background: url('./bsg/timer_grid.png') repeat;
+  /*background: url('./bsg/timer_grid.png') repeat;*/
+  --bg-colour: rgba(0, 0, 0, 0.3);
+  --size: 12px;
+  background-size: var(--size) var(--size);
+  background-image:
+    linear-gradient(to right, var(--bg-colour) 1px, transparent 1px),
+    linear-gradient(to bottom, var(--bg-colour) 1px, transparent 1px);
 }
 
 #Intermission {
