--- a/src/graphics/_misc/themes/bsg.theme.css
+++ b/src/graphics/_misc/themes/bsg.theme.css
@@ -12,6 +12,7 @@
 }
 
 *[class*='Border'] {
+  /* TODO: should this be border-box? */
   box-sizing: content-box;
   border-style: solid;
   border-width: 0;
