Fix dash for total

--- a/src/graphics/omnibar/dash-helpers.scss
+++ b/src/graphics/omnibar/dash-helpers.scss
@@ -11,6 +11,12 @@
   clip-path: polygon(63% 0, 100% 50%, 63% 100%, 0% 100%, 0 51%, 0% 0%);
 
   &.right {
-    clip-path: polygon(40% 0%, 100% 0%, 100% 100%, 40% 100%, 0% 50%);
+    clip-path: polygon(
+        35px 0%,
+        100% 0%,
+        100% 100%,
+        35px 100%,
+        0% 50%
+    );
   }
 }
