Restructure timer with a new font for better glyph centering

--- a/src/graphics/_misc/fonts/general_bsg.css
+++ b/src/graphics/_misc/fonts/general_bsg.css
@@ -19,6 +19,14 @@
 	font-style: normal;
 }
 
+/* https://www.dafont.com/ds-digital.font */
+@font-face {
+	font-family: 'DS_DIGITAL';
+  src: url('DS-DIGI.TTF') format('truetype');
+	font-weight: 300;
+	font-style: normal;
+}
+
 @font-face {
 	font-family: 'Corbel-Bold';
   src: url('corbel-bold.ttf') format('truetype');
